--- a/corprules.in
+++ b/corprules.in
@@ -5979,7 +5979,7 @@ PETTY_EXCUSE FUNPRE we worked really hard and got nowhere
 PETTY_EXCUSE FUNPRE we worked really hard but it still doesn't quite work
 PETTY_EXCUSE No one understands how I feel
 PETTY_EXCUSE FUNPRE others couldn't handle us because we're just `too real'
-PETTY_EXCUSE FUNPRE we're just `too real', so deal with it girlfriend 
+PETTY_EXCUSE FUNPRE the SCI_PROBLEM is we're just `too real', so deal with it girlfriend 
 PETTY_EXCUSE FUNPRE THEPRESIDENT was SCI_ADJ_ADV rude about our FINDINGs
 PETTY_EXCUSE FUNPRE it \emph{would've} worked if PETTY_RES PETTY_SUF
 PETTY_EXCUSE EVAL_GUTS_EXP_SET Well, I \emph{meant} to, I just forgot, ok? ...If PETTY_RES
@@ -6280,7 +6280,7 @@ SCI_PROOF_PROP is recursively enumerable PROPENDER
 SCI_PROOF_PROP is optimal PROPENDER
 SCI_PROOF_PROP is Turing-complete PROPENDER
 SCI_PROOF_PROP is maximally SOFTWARE_ADJ PROPENDER
-SCI_PROOF_PROP follows a Zipf-like distribution PROPENDER
+SCI_PROOF_PROP follows a FAMOUSLAST-like distribution PROPENDER
 
 #############################################################################
 ####### People #######
