--- a/corprules.in
+++ b/corprules.in
@@ -1164,6 +1164,22 @@ OVERVERBING EVALUATING
 OVERVERBING HACK_VERBING
 OVERVERBING MULTIPLE_VERBING
 
+OVERVERBED SCI_PROVE_VERBED
+OVERVERBED SCI_VERBED
+OVERVERBED EVAL_VERBED
+OVERVERBED METAVERBED
+OVERVERBED SCI_PRESENT_VERBED
+
+OVERVERB+5 SCI_PROVE_VERB
+OVERVERB+5 SCI_VERB
+OVERVERB+5 SCI_SYS_VERB
+OVERVERB+5 METAVERB
+OVERVERB+5 PROBE_VERB
+OVERVERB+3 SPOIL
+OVERVERB+3 CONSIDER
+OVERVERB SCREWOVER
+
+
 IMPL_INTRO after several TRACE_UNITs of DIFFICULT_X PROGRAMMING_VERBING, we finally have a working implementation of SCI_OUR_SYSTEM XXX
 IMPL_INTRO our implementation of SCI_OUR_SYSTEM is ADJECTIVE, AREAADJ, and EXP_ADJ XXX
 IMPL_INTRO though SCI_ANUMBER skeptics said it couldn't be done (most notably SCI_BY_WHO), we SCI_PRESENT_VERB a fully-working version of SCI_OUR_SYSTEM XXX
@@ -2409,6 +2425,8 @@ BAD_NV			tiresome
 BAD_NV			wearisome
 BAD_NV			tedious
 BAD_NV			monotonous
+BAD_NV			human
+BAD_NV			mediocre
 BAD_V	onerous 
 BAD_NV	dubious
 BAD_NV	difficult
@@ -2847,6 +2865,7 @@ EXP_WHOSE	the Learniversity's
 EXP_WHOSE	our Institute's
 EXP_WHOSE	the University's
 EXP_WHOSE	our University's
+EXP_WHOSE	Adelaide University's 
 EXP_WHOSE	the
 EXP_WHOSE	the family
 EXP_WHOSE	Snickers University's
@@ -2856,6 +2875,10 @@ EXP_WHOSE	Oxford University's
 EXP_WHOSE	Cambridge University's
 EXP_WHOSE	Princeton University's
 EXP_WHOSE	Yale University's
+EXP_WHOSE	Monash University's
+EXP_WHOSE	UNSW's
+EXP_WHOSE	Macquarie University's
+EXP_WHOSE	RMIT's
 EXP_WHOSE	FAMOUSLAST University's
 EXP_WHOSE	FermiLab's
 EXP_WHOSE	FAMOUSLAST Laboratory's
@@ -4709,6 +4732,9 @@ LIT_GOOD_NV+20	topical
 LIT_GREAT LIT_GREAT_NV
 LIT_GREAT LIT_GREAT_V
 
+LIT_GREAT_NV	divine
+LIT_GREAT_NV	stupendous
+LIT_GREAT_NV	brilliant
 LIT_GREAT_NV	great
 LIT_GREAT_NV	profound
 LIT_GREAT_NV	tremendous
@@ -5159,7 +5185,6 @@ SCI_ADJ_NV notable
 SCI_ADJ_NV fortuitous
 
 
-
 SCI_ADJ_NV BAD_NV
 SCI_ADJ_NV LIT_GOOD_NV
 SCI_ADJ_NV LIT_GREAT_NV
@@ -5252,7 +5277,7 @@ LIT_REVERSAL more explicitly
 LIT_REVERSAL for example
 LIT_REVERSAL more clearly
 LIT_REVERSAL relatively speaking
-LIT_REVERSAL even though it seemed BAD at the time
+LIT_REVERSAL though it seemed BAD at the time
 LREV+10	interestingly
 LREV+10	importantly
 LREV+10	surprisingly
@@ -5378,7 +5403,6 @@ SCI_PROVE_VERBED+30 addressed
 SCI_PROVE_VERBED orgasmed out
 SCI_PROVE_VERBED+30 book-learned
 
-
 SCI_PROVE_VERBING demonstrating
 SCI_PROVE_VERBING arguing
 SCI_PROVE_VERBING proving
@@ -5391,7 +5415,6 @@ SCI_PROVE_VERBING disconfirming
 SCI_PROVE_VERBING solving
 SCI_PROVE_VERBING addressing
 SCI_PROVE_VERBING book-learning
-
 
 SCI_PRESENT_VERB present
 SCI_PRESENT_VERB introduce
@@ -5920,8 +5943,8 @@ FUNPRE After all,
 FUNPRE Even so,
 FUNPRE We don't often say this, but
 FUNPRE Not to be rude, but
-FUNPRE+5 Though we don't wish to SCREWOVER,
-FUNPRE+5 Though we don't wish to SCREWOVER INTERJEC
+FUNPRE Though we don't wish to SCREWOVER
+FUNPRE Though we don't wish to SCREWOVER INTERJEC
 
 SCREWOVER rub salt in the wound
 SCREWOVER let the cat out of the bag
@@ -5978,7 +6001,7 @@ FUNPRE Thrusting into the future,
 FUNPRE Though it sounds unchristian,
 FUNPRE Though this almost never happens,
 FUNPRE Though we were careful `not to mention the war' INTERJEC
-FUNPRE Though we were repeatedly told ALLEG `we'd never had it so good',
+FUNPRE Though we were repeatedly told ALLEG  `we'd never had it so good',
 FUNPRE Even though I lost my fellowship ALLEG because I'm `too real',
 FUNPRE Face it,
 FUNPRE To be FRANK,
@@ -6034,7 +6057,6 @@ HEROIC_OVERSTATEMENT FUNPRE some of us are more evolved than others
 HEROIC_OVERSTATEMENT I like speling. It makes me feel big
 HEROIC_OVERSTATEMENT We have drunk our wine and our milk
 HEROIC_OVERSTATEMENT Excuse us, but I think we know what we're doing
-HEROIC_OVERSTATEMENT FUNPRE you \textit{so} wish you could be us
 HEROIC_OVERSTATEMENT FUNPRE we think we're pretty DEDICATED INTERJEC
 HEROIC_OVERSTATEMENT FUNPRE we started with SCI_A_FACT, and just went from there really
 HEROIC_OVERSTATEMENT FUNPRE this WORK sets the TONE for SCI_THING
@@ -6044,6 +6066,7 @@ TONE standard
 TONE gold standard
 TONE industry standard
 TONE bar
+
 
 INFACE in your face
 INFACE sucked in
@@ -6165,8 +6188,9 @@ FILLER_SURPRISE_2	LIT_OFTEN conflicts with the need to provide SCI_THING to SCI_
 
 FILLER_SENTENCE+3 LAME_OBSERVATION
 FILLER_SENTENCE+2 We know; it's confusing
+FILLER_SENTENCE	We really won't	take no	for an answer
 
-LAME_OBSERVATION We `shot the sheriff, but we did not shoot the deputy' INTERJEC
+LAME_OBSERVATION We shot the sheriff, but we did not shoot the deputy INTERJEC
 LAME_OBSERVATION We couldn't agree more, but we will anyway
 LAME_OBSERVATION No head injury is too trivial to be ignored
 LAME_OBSERVATION You had to be there
@@ -6174,7 +6198,7 @@ LAME_OBSERVATION You gotta believe us
 LAME_OBSERVATION Will you marry me? HEROIC_OVERSTATEMENT
 LAME_OBSERVATION Hi mum
 LAME_OBSERVATION Hi mum, I'm writing an article! HEROIC_OVERSTATEMENT
-LAME_OBSERVATION FUNPRE `Rome wasn't built in a day'
+LAME_OBSERVATION FUNPRE Rome wasn't built in a day
 LAME_OBSERVATION FUNPRE one can't break the laws of physics, but one \emph{can} be civilly disobedient towards them
 LAME_OBSERVATION+5 It CLEARLY remains to be SCI_VERBED whether OBS_END
 LAME_OBSERVATION+5 SCI_B_LEADIN_C TAKE_NOTE_THAT if OBS_END, it SCI_MAY cause SCI_ADJ_ADV BAD EXP_ADJ FINDINGs
