--- a/corprules.in
+++ b/corprules.in
@@ -6030,6 +6030,29 @@ SPOIL defile
 SPOIL decimate
 SPOIL devastate
 SPOIL harm
+SPOIL impair
+SPOIL mar
+SPOIL tarnish
+SPOIL upset
+SPOIL blemish
+SPOIL damage
+SPOIL debase
+SPOIL deface
+SPOIL desecrate
+SPOIL dispoil
+SPOIL disfigure
+SPOIL disgrace
+SPOIL injure
+SPOIL pillage
+SPOIL plunder
+SPOIL ransack
+SPOIL waste
+SPOIL ravage
+SPOIL blot out
+SPOIL assail
+SPOIL abuse
+SPOIL violate
+SPOIL screw up
 
 CONSIDER consider
 CONSIDER picture
