--- a/corprules.in
+++ b/corprules.in
@@ -6008,7 +6008,7 @@ FUNPRE To be FRANK,
 FUNPRE Even though it's probably too late to change our minds,
 FUNPRE I honestly have no idea where I am going with this, but 
 FUNPRE CONSIDER, if you will, that
-FUNPRE Recalling the wise words of FAMOUSLAST, `PROVERB',
+FUNPRE Recalling the wise words of SCI_SOURCE, `PROVERB',
 
 PROVERB BTEXT
 PROVERB LAME_OBSERVATION
