--- a/corprules.in
+++ b/corprules.in
@@ -3206,7 +3206,7 @@ STORAGE_DEVICES_N	EVAL_MOD_N
 STORAGE_SIZE		EVAL_MOD_NMB
 STORAGE_SIZE		EVAL_MOD_NkB
 STORAGE_SIZE		EVAL_MOD_NGB
-STORAGE_SIZE		EVAL_MOD_N-petabytes
+STORAGE_SIZE		EVAL_MOD_N-petabyte
 STORAGE_SIZE		EVAL_MOD_NTB
 STORAGE_SIZE		EVAL_MOD_N-EVAL_UNIT_UM
 
