--- a/corprules.in
+++ b/corprules.in
@@ -5284,6 +5284,7 @@ LREV+10	surprisingly
 LREV+5	unsurprisingly
 LREV+10	remarkably
 LREV	boringly
+LREV 	sickeningly
 LREV	subtly
 LREV	hauntingly
 LREV	exasperatingly
