--- a/corprules.in
+++ b/corprules.in
@@ -3722,7 +3722,7 @@ MAYBE_ESUF . SCI_RESPONSEX
 
 INTERJEC (as everyone keeps pointing out)
 INTERJEC (and let's face it, who doesn't)
-INTERJEC , at first glace,
+INTERJEC , at first glance
 INTERJEC (rhetorically)
 INTERJEC (LREV)
 INTERJEC+3 
