--- a/corprules.in
+++ b/corprules.in
@@ -1163,6 +1163,7 @@ OVERVERBING SCI_SYS_VERBING
 OVERVERBING EVALUATING
 OVERVERBING HACK_VERBING
 OVERVERBING MULTIPLE_VERBING
+OVERVERBING SCI_DIAGRAM_VERBING
 
 OVERVERBED SCI_PROVE_VERBED
 OVERVERBED SCI_VERBED
@@ -1178,6 +1179,9 @@ OVERVERB+5 PROBE_VERB
 OVERVERB+3 SPOIL
 OVERVERB+3 CONSIDER
 OVERVERB SCREWOVER
+
+OVERVERBS SCI_VERBS
+OVERVERBS SCI_DIAGRAM_VERBS
 
 
 IMPL_INTRO after several TRACE_UNITs of DIFFICULT_X PROGRAMMING_VERBING, we finally have a working implementation of SCI_OUR_SYSTEM XXX
@@ -2684,7 +2688,7 @@ EXP_ADJ+30		portable
 EXP_ADJ+5		edible
 EXP_ADJ+10		chiral
 EXP_ADJ+30		real-time
-EXP_ASJ+30              cloud-based
+EXP_ADJ+30              cloud-based
 EXP_ADJ+10		top-quality
 EXP_ADJ+5		`top-quality'
 EXP_ADJ+30		ultrafast
@@ -5948,6 +5952,7 @@ FUNPRE We don't often say this, but
 FUNPRE Not to be rude, but
 FUNPRE Though we don't wish to SCREWOVER
 FUNPRE Though we don't wish to SCREWOVER INTERJEC
+FUNPRE Heaven forbid
 
 SCREWOVER rub salt in the wound
 SCREWOVER let the cat out of the bag
@@ -6024,6 +6029,8 @@ PROVERB once OVERVERBED, twice SCI_ADJ
 PROVERB never let them see you OVERVERB
 PROVERB MPEOP in need are MPEOP indeed
 PROVERB to OVERVERB is BAD, to OVERVERB is LIT_GREAT
+PROVERB no hat, no play
+PROVERB no SCI_THING, no OVERVERB
 
 MPEOP SCI_PEOPLE
 MPEOP SCI_PERSONs
@@ -6283,6 +6290,38 @@ OMIT_WHY due to resource constraints
 OMIT_WHY for anonymity
 OMIT_WHY for now
 OMIT_WHY until future work
+
+GENERIC_SENTENCE PREAMBLE GCLAUSECLSUFF XXX
+GENERIC_SENTENCE PREAMBLE GCLAUSECONJUNC GCLAUSECLSUFF XXX
+
+PREAMBLE+5
+PREAMBLE+2 LIT_ALTHOUGH
+PREAMBLE+2 LIT_CONCLUSION,
+PREAMBLE+2 LIT_MIDDLE
+PREAMBLE+2 LIT_LEADIN
+PREAMBLE FUNPRE
+PREAMBLE If
+PREAMBLE Never let it be said that
+
+GCLAUSE SUBG TIMPLG TIMPLG ACTG OBJG DATG
+GCLAUSE TIMPLG TIMPLG SUBG ACTG OBJG DATG
+GCLAUSE SUBG ACTG OBJG TIMPLG TIMPLG DATG
+GCLAUSE SUBG ACTG OBJG DATG TIMPLG TIMPLG
+GCLAUSE TIMPLG SUBG ACTG OBJG TIMPLG DATG
+GCLAUSE TIMPLG SUBG ACTG OBJG DATG TIMPLG
+
+SUBG \textit{SUB}
+SUBG `SUB'
+SUBG+10 SUB
+
+TIMPLG \textit{TIMPL}
+TIMPLG `TIMPL'
+TIMPLG+10 TIMPL
+TIMPLG+15 
+
+ACTG \textit{ACT}
+ACTG `ACT'
+
 
 SCI_A_FACT	SCI_SOURCE's SCI_ACT in SCI_YEAR
 SCI_A_FACT	the SCI_COMPLEXNOUN of SCI_FIELD
@@ -7388,6 +7427,8 @@ DEDICATED hot
 DEDICATED prestigious
 DEDICATED hotbod
 DEDICATED awesome
+DEDICATED funky
+DEDICATED redonkulous
 DEDICATED budding
 DEDICATED `crack'
 DEDICATED lovely
