--- a/corprules.in
+++ b/corprules.in
@@ -477,7 +477,7 @@ SCI_INTRO_A+5	The SOFTWARE_ADJ SCI_VERBION of SCI_THING_P represents ANADJ SCI_V
 ANADJ a SCI_ADJ_NV
 ANADJ an SCI_ADJ_V
 SCI_INTRO_A+5	In SCI_VERBING SCI_ADJ SCI_MODEL_TYPE_P REACTBYWHO, SOFTWARE_ADJ SCI_THING_P have recently been SCI_PROVE_VERBED XXX This indicates that LITTLE progress on the topic of SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN has been SCI_ACHIEVED XXX
-SCI_INTRO_A	EXP_ADJ SCI_BUZZWORD_NOUN and SCI_THING_MOD have garnered LIT_GREAT interest from both SCI_COUNTRY_MAYBE SCI_PEOPLE and SCI_PEOPLE in the last several TRACE_UNIT_LONGs XXX
+SCI_INTRO_A	EXP_ADJ SCI_BUZZWORD_NOUN and SCI_THING_MOD have garnered LIT_GREAT interest from both SCI_COUNTRY_MAYBE SCI_PEOPLE and SCI_PEOPLE in the last SCI_MANY TRACE_UNIT_LONGs XXX
 SCI_INTRO_A	SCI_THING_MOD represent an SCI_IMPORTANTV topic in the field XXX
 SCI_INTRO_A	In recent TRACE_UNIT_LONGs, much intensive research has been devoted to the SCI_ACT; LIT_REVERSAL, SCI_ANUMBER have SCI_VERBED the SCI_ACT XXX
 SCI_INTRO_A	SCI_THING_MOD and SCI_THING_MOD, while SCI_ADJ in theory, have not been PROBE_CONSIDERED SCI_ADJ until recently XXX
@@ -1018,7 +1018,7 @@ TRACE_UNIT	PREFIXX-second
 
 SCI_TRACE	TRACE_UNIT-long trace
 SCI_TRACE	NONZ-TRACE_UNIT-long trace
-SCI_TRACE	trace, over the course of several TRACE_UNITs,
+SCI_TRACE	trace, over the course of SCI_MANY TRACE_UNITs,
 
 MODEL_CONCL+15	WEASK is SYSNAME able to satisfy all of these assumptions?  SCI_RESPONSE
 MODEL_CONCL+15	taking this into account, does SYSNAME represent the way forward in the field of SCI_FIELD?  SCI_RESPONSE 
@@ -1170,6 +1170,7 @@ OVERVERBED SCI_VERBED
 OVERVERBED EVAL_VERBED
 OVERVERBED METAVERBED
 OVERVERBED SCI_PRESENT_VERBED
+OVERVERBED PROBE_CONSIDERED
 
 OVERVERB+5 SCI_PROVE_VERB
 OVERVERB+5 SCI_VERB
@@ -1179,12 +1180,20 @@ OVERVERB+5 PROBE_VERB
 OVERVERB+3 SPOIL
 OVERVERB+3 CONSIDER
 OVERVERB SCREWOVER
+OVERVERB IMPROVE_VERB
 
 OVERVERBS SCI_VERBS
 OVERVERBS SCI_DIAGRAM_VERBS
+OVERVERBS SCI_SYS_VERBS
 
+OVERADV SCI_GROWTH_ADV
+OVERADV ADVERB 
+OVERADV SCI_ADJ_ADV
+OVERADV SCI_ADV
+OVERADV LIT_GREAT_ADV
+OVERADV SCI_MATH_ADV
 
-IMPL_INTRO after several TRACE_UNITs of DIFFICULT_X PROGRAMMING_VERBING, we finally have a working implementation of SCI_OUR_SYSTEM XXX
+IMPL_INTRO after SCI_MANY TRACE_UNITs of DIFFICULT_X PROGRAMMING_VERBING, we finally have a working implementation of SCI_OUR_SYSTEM XXX
 IMPL_INTRO our implementation of SCI_OUR_SYSTEM is ADJECTIVE, AREAADJ, and EXP_ADJ XXX
 IMPL_INTRO though SCI_ANUMBER skeptics said it couldn't be done (most notably SCI_BY_WHO), we SCI_PRESENT_VERB a fully-working version of SCI_OUR_SYSTEM XXX
 IMPL_INTRO in this section, we SCI_PRESENT_VERB version VERSION of SYSNAME, the culmination of TRACE_UNITs of PROGRAMMING_VERBING XXX 
@@ -1482,7 +1491,7 @@ DOTPARA DOTOPENER DOTS DOTCONC
 
 DOTOPENER The SCI_VERBION of EXP_ADJ SCI_BUZZWORD_NOUN MATTERS, due to its SCI_ADJ CONSTRAINT_TYPE in OVERVERBING SCI_THING_P XXX SCI_IPF_MID TAKE_NOTE_THAT we SCI_SYS_VERB an SCI_ADJ_V SCI_MANNER with regard to a IMPL_COMPONENT, which is HACKED for use with SCI_THING_P. CONNECT MODEL_CONCL 
 
-DOTOPENER IMPL_INTRO IMPL_MID CONNECT we present several AMBITIOUS SCI_BUZZWORD_NOUN for MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level SCI_AB_A_END, LIT_ALTHOUGH this is LREV SCI_FAIR and as SCI_EXPENSIVE as it is BAD XXX LIT_REVERSAL, RELWORK_CONCL 
+DOTOPENER IMPL_INTRO IMPL_MID CONNECT we present SCI_MANY AMBITIOUS SCI_BUZZWORD_NOUN for MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level SCI_AB_A_END, LIT_ALTHOUGH this is LREV SCI_FAIR and as SCI_EXPENSIVE as it is BAD XXX LIT_REVERSAL, RELWORK_CONCL 
 
 DOTOPENER RELWORK_INTRO LIT_CONCLUSION, RESULT Over the last few TRACE_UNIT_LONGs, it has become increasingly apparent that EXP_WHOSE SCI_SYSTEM involving EXP_ADJ SCI_BUZZWORD_NOUN MODEL_GROUNDING XXX LIT_MIDDLE ASSUMPTION LIT_CONCLUSION SCI_THING_S SCI_CAN SCI_SYS_VERB DIFFICULT_X and AMBITIOUS SCI_PROBLEM_PL, such as the THISIDEA of CONCEPT XXX CONNECT EVAL_GUTS_INTRO LREV, ASSERTION. LIT_LEADIN RELWORK_MID_X XXX 
 
@@ -1812,7 +1821,7 @@ RELWORK_INTRO_1 we now consider RELATED work.
 RELWORK_INTRO_1 in designing SCI_OUR_SYSTEM, we drew on RELATED work from a number of distinct areas.
 RELWORK_INTRO_1+10 RELWORK_INTRO
 
-RELWORK_INTRO while we know of no other studies on SCI_GENERIC_NOUN, several efforts have been made to SCI_VERB SCI_THING_MOD RELWORK_XXX
+RELWORK_INTRO while we know of no other studies on SCI_GENERIC_NOUN, SCI_MANY efforts have been made to SCI_VERB SCI_THING_MOD RELWORK_XXX
 RELWORK_INTRO we now compare our approach to RELATED SCI_BUZZWORD_ADJ SCI_APPROACH_PL RELWORK_XXX
 RELWORK_INTRO our SCI_APPROACH is related to research into SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN, SCI_THING_MOD, and the SCI_ACT RELWORK_XXX
 RELWORK_INTRO the SCI_VERBION of SCI_GENERIC_NOUN has been widely studied RELWORK_XXX
@@ -1831,9 +1840,9 @@ RELWORK_MID_X a RECENT_NV and SCI_PROVE_VERBED LEVEL LONGWORK RELWORK_CITATION S
 AREC a RECENT_NV
 AREC an RECENT_V
 RELWORK_MID_X recent work SCI_BY_WHO_SOMETIMES suggests a SCI_SYSTEM for SCI_SYS_VERBING SCI_GENERIC_NOUN, but does not offer an implementation
-RELWORK_MID_X SCI_BY_WHO SCI_PRESENT_VERBED several SCI_BUZZWORD_ADJ SCI_APPROACH_PL RELWORK_CITATION, and reported that they have LIT_GREAT IMPACT SCI_GENERIC_NOUN
+RELWORK_MID_X SCI_BY_WHO SCI_PRESENT_VERBED SCI_MANY SCI_BUZZWORD_ADJ SCI_APPROACH_PL RELWORK_CITATION, and reported that they have LIT_GREAT IMPACT SCI_GENERIC_NOUN
 RELWORK_MID_X we had our SCI_APPROACH in mind before SCI_BY_WHO SCI_PROVE_VERBED the RECENT SCI_STATUS_ADJ work on SCI_GENERIC_NOUN
-RELWORK_MID_X SCI_OVERALL_THESIS_THING RELWORK_CITATION proposed by SCI_BY_WHO fails to SCI_PROVE_VERB several SCI_ADJ SCI_PROBLEM_PL that SCI_OUR_SYSTEM does indeed SCI_PROBLEM_SOLVE
+RELWORK_MID_X SCI_OVERALL_THESIS_THING RELWORK_CITATION proposed by SCI_BY_WHO fails to SCI_PROVE_VERB SCI_MANY SCI_ADJ SCI_PROBLEM_PL that SCI_OUR_SYSTEM does indeed SCI_PROBLEM_SOLVE
 RELWORK_MID_X the SCI_STATUS_ADJ SCI_SYSTEM SCI_BY_WHO_SOMETIMES does not SCI_SYS_VERB SCI_GENERIC_NOUN as well as our SCI_APPROACH
 RELWORK_MID_X unlike SCI_ANUMBER RELATED SCI_APPROACH_PL RELWORK_CITATION, we do not attempt to SCI_SYS_VERB or SCI_SYS_VERB SCI_GENERIC_NOUN
 RELWORK_MID_X instead of SCI_VERBING SCI_GENERIC_NOUN RELWORK_CITATION, we SCI_SOLVE_CLAUSE simply by SCI_VERBING SCI_GENERIC_NOUN
@@ -1912,7 +1921,7 @@ RELWORK_CONCL SCI_B_LEADIN_C the SCI_SYSTEM of SCI_BY_WHO RELWORK_CITATION is a 
 RELWORK_CONCL LIT_CONCLUSION, LIT_ALTHOUGH LITTLE SCI_STATUS_ADJ work has been done in this area OVERTIME_MAYBE, our SCI_APPROACH is SCI_ADV the SCI_SYSTEM of choice among SCI_COUNTRY_MAYBE SCI_PEOPLE RELWORK_XXX
 RELWORK_CONCL RELWORK_MID_X RELWORK_XXX
 
-OVERTIME_MAYBE over the course of several TRACE_UNIT_LONGs
+OVERTIME_MAYBE over the course of SCI_MANY TRACE_UNIT_LONGs
 OVERTIME_MAYBE
 
 #############################################################################
@@ -6303,25 +6312,124 @@ PREAMBLE FUNPRE
 PREAMBLE If
 PREAMBLE Never let it be said that
 
-GCLAUSE SUBG TIMPLG TIMPLG ACTG OBJG DATG
-GCLAUSE TIMPLG TIMPLG SUBG ACTG OBJG DATG
-GCLAUSE SUBG ACTG OBJG TIMPLG TIMPLG DATG
-GCLAUSE SUBG ACTG OBJG DATG TIMPLG TIMPLG
-GCLAUSE TIMPLG SUBG ACTG OBJG TIMPLG DATG
-GCLAUSE TIMPLG SUBG ACTG OBJG DATG TIMPLG
+GCLAUSE SUBGS TIMPLG TIMPLG ACTGS OBJG DATG
+GCLAUSE TIMPLG TIMPLG SUBGS ACTGS OBJG DATG
+GCLAUSE SUBGS ACTGS OBJG TIMPLG TIMPLG DATG
+GCLAUSE SUBGS ACTGS OBJG DATG TIMPLG TIMPLG
+GCLAUSE TIMPLG SUBGS ACTGS OBJG TIMPLG DATG
+GCLAUSE TIMPLG SUBGS ACTGS OBJG DATG TIMPLG
 
-SUBG \textit{SUB}
-SUBG `SUB'
-SUBG+10 SUB
+GCLAUSE SUBGP TIMPLG TIMPLG ACTGP OBJG DATG
+GCLAUSE TIMPLG TIMPLG SUBGP ACTGP OBJG DATG
+GCLAUSE SUBGP ACTGP OBJG TIMPLG TIMPLG DATG
+GCLAUSE SUBGP ACTGP OBJG DATG TIMPLG TIMPLG
+GCLAUSE TIMPLG SUBGP ACTGP OBJG TIMPLG DATG
+GCLAUSE TIMPLG SUBGP ACTGP OBJG DATG TIMPLG
+
+CONJUNC , which GMOD
+CONJUNC , and GMOD
+CONJUNC ; this GMOD
+CONJUNC , LIT_OFTEN OVERVERBING that
+
+CLSUFF+10
+CLSUFF PETTY_SUF
+CLSUFF FUNNEND
+
+SUBGS \textit{SUBS}
+SUBGS `SUBS'
+SUBGS+10 SUBS
+SUBS I
+SUBS KEYTHE SCI_THING_S
+SUBS KEYTHE SCI_PERSON
+SUBS KEYTHE PROPNOUN
+SUBS KEYTHE CONSTRAINT_TYPE
+SUBS KEYTHE EVAL_MEASUREMENT
+SUBS KEYTHE EXP_WHERE
+SUBS KEYTHE SCI_MODEL_TYPE
+
+SUBGP \textit{SUBP}
+SUBGP `SUBP'
+SUBGP+10 SUBP
+SUBP we
+SUBP they
+SUBP SCI_THING_P
+SUBP MPEOP
+SUBP CONSTRAINT_P
+
+OBJG \textit{OBJ}
+OBJG `OBJ'
+OBJG+10 OBJ
+MAYBE_ADJ+5 EXP_ADJ
+MAYBE_ADJ SCI_COUNTRY_MAYBE
+MAYBE_ADJ RELATED
+MAYBE_ADJ DIFFERENT
+MAYBE_ADJ AMBITIOUS
+MAYBE_ADJ DEDICATED
+MAYBE_ADJ+3
+ATHE a
+ATHE the
+OBJ ATHE MAYBE_ADJ SCI_VERBION
+OBJ ATHE MAYBE_ADJ SCI_MODEL_TYPE
+OBJ ATHE MAYBE_ADJ CONSTRAINT_TYPE
+OBJ ATHE MAYBE_ADJ SCI_THING_S
+OBJ MAYBE_ADJ SCI_VERBIONs
+OBJ MAYBE_ADJ SCI_MODEL_TYPE_P
+OBJ SCI_FIELD
+OBJ MATHADJ PROPNOUN
+OBJ+3 SCI_GENERIC_NOUN
+OBJ MAYBE_ADJ SCI_THING_P
+OBJ SYSNAME
+OBJ SCI_OVERALL_THESIS_THING
+OBJ SOFTWARE_PROP_UNMOD
+OBJ EXP
+OBJ us
+OBJ them
+OBJ MPEOP
+OBJ ATHE SCI_PERSON
+OBJ BIGTHEOREM
+OBJ FINDING
 
 TIMPLG \textit{TIMPL}
 TIMPLG `TIMPL'
 TIMPLG+10 TIMPL
 TIMPLG+15 
+SCI_MANY+2 many
+SCI_MANY+2 few
+SCI_MANY good many
+SCI_MANY+2 several
+TIMPL in the last SCI_MANY TRACE_UNIT_LONGs
+TIMPL CDESY
+TIMPL PIEENDER
+TIMPL in ATHE EXP_WHERE
+TIMPL in ATHE MAYBE_ADJ EXP_WHERE_UM
+TIMPL in the early part of the SCI_AGE
+TIMPL by the MAYBE_ADJ LABRATS
 
-ACTG \textit{ACT}
-ACTG `ACT'
+ACTGS \textit{ACTS}
+ACTGS `ACTS'
+ACTS MAYBE_ADV OVERVERBS
+ACTS GMOD MAYBE_ADV OVERVERB
 
+MAYBE_ADV OVERADV
+MAYBE_ADV+2
+GMOD+2 SCI_MAY
+GMOD helps to
+GMOD SCI_MAY help to
+GMOD does not
+
+ACTGP \textit{ACTP}
+ACTGP `ACTP'
+ACTP MAYBE_ADV OVERVERB
+ACTP GMOD MAYBE_ADV OVERVERB
+
+DATG \textit{DAT}
+DATG `DAT'
+DATG+10 DAT
+DAT in the SCI_MANNER initially expected
+DAT SCI_TOGETHERWITH OBJ
+DAT for OBJ
+DAT through OBJ
+DAT after OVERVERBING OBJ
 
 SCI_A_FACT	SCI_SOURCE's SCI_ACT in SCI_YEAR
 SCI_A_FACT	the SCI_COMPLEXNOUN of SCI_FIELD
